# mqtt-spc

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix
src/: bridge.rs  config.rs  main.rs  model.rs
src/mqtt/: discovery.rs
src/spc/: client.rs  parser.rs
